Initial react app implementation.
